Java 14 - JFR Event Streaming (JEP 349)